tests/fixtures/invalid/pow_list_str_bytes.py
# Cannot call pow() with List[int], Str, Bytes
x = pow([1, 2, 3], "hello", b"hello")
